# demo-temporal

./: .gitignore  .hadolint.yaml  .markdownlint.yaml  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  mise.toml  pyproject.toml
docker/: Dockerfile
docker/postgres/: init.sql
src/: activities.py  api.py  common.py  contracts.py  gateways.py  observability.py  repo.py  usecases.py  worker.py  workflows.py
src/templates/: _error.html  _user_row.html  index.html
tests/: test_api_smoke.py  test_contracts.py
